--- a/app/src/main/res/layout/correct_dialog.xml
+++ b/app/src/main/res/layout/correct_dialog.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"
-        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:text="Ok"
         android:textColor="@color/black"
         android:textSize="20sp"
