--- a/app/src/main/res/layout/time_over_dialog.xml
+++ b/app/src/main/res/layout/time_over_dialog.xml
@@ -24,9 +24,9 @@
         android:layout_marginBottom="50dp"
         android:text="Time Over"
         android:textAlignment="center"
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/poppin_bold"
         app:layout_constraintBottom_toTopOf="@+id/timeOver_ok"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/button_bg"
+        android:backgroundTint="@color/white"
         android:text="Ok"
-        android:textColor="@android:color/white"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
