--- a/app/src/main/res/layout/wrong_dialog.xml
+++ b/app/src/main/res/layout/wrong_dialog.xml
@@ -42,9 +42,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="32dp"
-        android:background="@color/white"
+        android:backgroundTint="@color/background"
         android:text="Ok"
-        android:textColor="@android:color/black"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
