--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -2,24 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/background"
+    android:gravity="center"
     android:orientation="vertical">
+
     <TextView
         android:id="@+id/txt_result_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/poppin_bold"
         android:gravity="center"
-        android:text="Your Quiz Result"
+        android:text="@string/your_quiz_result"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textSize="18sp" />
+
     <ImageView
         android:id="@+id/emoji_ReactionImg"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="30dp"
+        android:contentDescription="@string/logo"
         android:src="@drawable/baseline_emoji_events_24" />
 
     <LinearLayout
@@ -28,7 +31,9 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="16dp"
         android:background="@color/purple_500"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -36,29 +41,32 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tvright"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppin_bold"
                 android:gravity="center"
                 android:padding="12dp"
-                android:text="Correct: 0"
+                android:text="@string/correct_0"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                android:fontFamily="@font/poppin_bold"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tvwrong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppin_bold"
                 android:gravity="center"
                 android:padding="12dp"
-                android:text="Wrong: 0"
+                android:text="@string/wrong_0"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                android:fontFamily="@font/poppin_bold"
                 android:textStyle="bold" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -66,44 +74,49 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tvScore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppin_bold"
                 android:gravity="center"
                 android:padding="12dp"
-                android:text="Score: 0"
+                android:text="@string/score_0"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:fontFamily="@font/poppin_bold" />
+                android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/tvSkip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppin_bold"
                 android:gravity="center"
                 android:padding="12dp"
                 android:text="Skip: 0"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:fontFamily="@font/poppin_bold"/>
+                android:textSize="16sp" />
         </LinearLayout>
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
         android:gravity="bottom"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/tvPlayAgain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn"
+            android:fontFamily="@font/poppin_bold"
             android:gravity="center"
             android:padding="16sp"
-            android:text="Take Quiz Again"
+            android:text="@string/take_quiz_again"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="16sp" />
     </LinearLayout>
 </LinearLayout>
