--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:padding="16dp"
-    tools:context=".PlayActivity">
+    tools:context=".QuestionActivity">
 
     <ImageView
         android:id="@+id/logo_img"
